--- a/GreetingApp/GreetingApp.csproj
+++ b/GreetingApp/GreetingApp.csproj
@@ -1,12 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>60b157e1-4411-4f7b-a6cc-f6663ac97da2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GreetingAppManagerLayer\GreetingAppManagerLayer.csproj" />
+    <ProjectReference Include="..\GreetingAppModelLayer\GreetingAppModelLayer.csproj" />
+    <ProjectReference Include="..\GreetingAppRepositoryLayer\GreetingAppRepositoryLayer.csproj" />
   </ItemGroup>
 
 </Project>
