--- a/GreetingApp/appsettings.json
+++ b/GreetingApp/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=(localdb)\\MSSQLLOCALDB;Initial Catalog=MyGreetingApp;Integrated Security=True"
+  }
 }
